--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^9.0.8",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.5",
     "scss": "^0.2.4",
