--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.5",
     "scss": "^0.2.4",
+    "supertokens-auth-react": "^0.26.0",
     "sweetalert2": "^11.4.29",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
